--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,9 @@
   "author": "Drew Nollsch",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongodb": "^4.1.3"
   },
   "bugs": {
     "url": "https://github.com/drex04/personal-website/issues"
@@ -25,5 +28,8 @@
   "homepage": "https://github.com/drex04/personal-website#readme",
   "engines": {
     "node": "16.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
   }
 }
